css/main.css
* {
  box-sizing: border-box;
  font-family: "Cantarell", sans-serif;
  color: white;
  text-shadow: 1px 1px 2px black,
    1px 1px 8px black;
}

body {
  margin: 0;
  background-image: url('../assets/background/1.jpg');
  background-attachment: fixed;
  background-position-y: -300px;
  background-size: 230% 150%;
  min-width: 280px;
}

main {
  text-align: center;
}

h1 {
  margin-top: 0;
}

img {
  width: 100%
}

.displayNone {
  display: none;
}

.negrita {
  font-weight: 700;
}

.margenRelleno {
  /* Ajusto el margen para que no sobresalgan más allá de la página las imagenes con el efecto de agrandado */
  /* TODO: Con esto funciona bien para todos los casos menos cuando hay solo una columna de secundarias, darle una vuelta. */
  margin: 2.5dvw;
  padding: 2dvw;
}

.cajaTransparente {
  /* Uso este estilo entre otros también para los botones y estos tienen borde por defecto. */
  border: none;
  border-radius: 1dvw;
  background: linear-gradient(rgba(0, 155, 255, 0.1), rgba(0, 80, 220, 0.2));
  box-shadow: 0 0 0.9dvw 0.3vw rgba(0, 0, 0, 0.3);
  backdrop-filter: blur(5px);
}

.flexContainer {
  display: flex;
  flex-wrap: wrap;
  gap: 2dvw;
}

.flexCentrado {
  justify-content: center;
}

.flexItem {
  flex-basis: 100%;
}

.flexItem>div {
  border-radius: inherit;
  overflow: hidden;
  transition: transform 0.3s ease;
}

.flexItem>div>figure {
  margin: 0;
}

.flexItem>div>p {
  font-style: italic;
}

.flexItemPrincipal {
  order: -1;
  /* Esta propiedad permite que al hacer scroll a un elemento no quede ajustado a la parte superior de la ventana sino que le de un margen. */
  scroll-margin-top: 2dvw;
}

.flexItemSecundario>div>p {
  opacity: 0;
  transform: translateY(-2em);
  transition: all 0.5s ease;
}

.flexItemSecundario:hover>div {
  transform: scale(0.90);
}

.flexItemSecundario:hover>div>p {
  opacity: 1;
  transform: translateY(0);
}

#cabeceraPrincipal>p {
  font-size: 3em;
  font-weight: 400;
  text-align: center;
  margin: 1.5dvh;
}

#botonesFiltrado>button {
  font-size: 1rem;
  text-transform: capitalize;
  padding: 1dvw 2dvw 1dvw 1dvw;
}

#botonesFiltrado>button,
.flexItemSecundario {
  order: 1;
  transition: transform 0.3s ease;
}

#botonesFiltrado>button::before {
  content: '🏷️';
  margin-right: 1dvw;
  text-shadow: none;
}

#botonesFiltrado>button:hover {
  background: linear-gradient(rgba(255, 255, 255, 0.1), rgba(150, 150, 150, 0.2));
}

#botonesFiltrado>button:not(.pulsado):hover,
.flexItemSecundario:hover {
  transform: scale(1.2);
  z-index: 1;
  cursor: pointer;
}

#botonesFiltrado>button:active,
#botonesFiltrado>button.pulsado {
  background: linear-gradient(rgba(80, 80, 80, 0.1), rgba(255, 255, 255, 0.2));
  text-shadow: 0 0 2px black,
    -1px -1px 6px black;
}

/* Dispositivos móviles medianos */
@media screen and (min-width: 576px) {
  .flexItemSecundario {
    flex-basis: calc(50% - 1.002dvw);
  }
}

/* Tablets */
@media screen and (min-width: 768px) {
  .flexItemSecundario {
    flex-basis: calc(33.33% - 1.33dvw);
  }
}

/* Pantallas de escritorio pequeñas */
@media screen and (min-width: 992px) {
  .flexItemSecundario {
    flex-basis: calc(25% - 1.502dvw);
  }
}

/* Pantallas de escritorio grandes */
@media screen and (min-width: 1200px) {
  .flexItemSecundario {
    flex-basis: calc(20% - 1.601dvw);
  }
}

